--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,15 +1,45 @@
 {
-  "name": "@myrepo/ui",
+  "name": "awesome-component-owner",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "types": "./dist/types/index.d.ts",
+  "typings": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/index.mjs"
+    }
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-transform-runtime": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@babel/runtime-corejs3": "^7.28.2",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@types/hammerjs": "^2.0.46",
+    "@types/react": "^19.1.8",
+    "@vitejs/plugin-react": "^4.3.4",
+    "core-js": "^3.44.0",
+    "sass": "1.79.6",
+    "vite": "7.0.5",
+    "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-lib-inject-css": "^2.2.2"
+  },
   "dependencies": {
-    "@myrepo/utils": "workspace:^1.0.0"
+    "hammerjs": "^2.0.8",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "react-error-boundary": "^5.0.0",
+    "react-use": "^17.3.0 || ^18.0.0"
   }
 }
