--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "lerna run build",
+    "lerna-init": "lerna init",
+    "bootstrap": "pnpm install",
+    "publish": "lerna publish"
   },
   "files": [
     "dist"
