chore: 因本地环境问题无法使用pnpm install，先更改成pnpm配置

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "publish": "lerna publish",
     "utils-build": "lerna run build --scope=awesome-utils-owner",
     "ui-build": "lerna run build --scope=awesome-component-owner",
-    "build-link": "lerna run build && lerna link"
+    "build-link": "lerna run build && lerna link",
+    "clear": "lerna clean -y && rm -rf node_modules"
   },
   "files": [
     "dist"
