--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,10 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "version": "0.0.2",
-  "npmClient": "npm",
+  "npmClient": "pnpm",
   "packages": [
     "packages/*"
   ],
-  "useNx": true
+  "useNx": true,
+  "useWorkspaces": true
 }
