--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,7 +34,8 @@
     "sass": "1.79.6",
     "vite": "7.0.5",
     "vite-plugin-dts": "^4.5.4",
-    "vite-plugin-lib-inject-css": "^2.2.2"
+    "vite-plugin-lib-inject-css": "^2.2.2",
+    "awesome-utils-owner": "0.0.2"
   },
   "dependencies": {
     "hammerjs": "^2.0.8",
